# parallel_programming

MPI/client_server/: Makefile
MPI/client_server/src/: master.cpp
MPI/diffusion_problem/: Makefile
MPI/diffusion_problem/src/: solver.cpp
MPI/integration/: experiment.xlsx
MPI/integration/src/: integration.cpp
MPI/introduction/src/: hello_world.c  ring.c  sum.c
MPI/para_sort/src/: sort.cpp
OpenMP/balancer/: Makefile
OpenMP/balancer/src/: balancer.cpp
OpenMP/boundary_problem/: CMakeLists.txt  boundary_problem.cpp  chart.py
OpenMP/introduction/: Makefile
OpenMP/introduction/src/: hello_world.c  sum.c  sync.c
OpenMP/lab/: CMakeLists.txt  helper.hpp  run_benchs.sh
OpenMP/lab/var0/: app0.cpp  app0_omp.cpp
OpenMP/lab/var1a/: app1.cpp
OpenMP/lab/var3e/: app3.cpp
OpenMP/loop_paralization/: CMakeLists.txt  run_benchs.sh
OpenMP/loop_paralization/var0/: app0.cpp  app0_mpi.cpp
OpenMP/loop_paralization/var1a/: app1.cpp  app1_mpi.cpp
OpenMP/loop_paralization/var3e/: app3.cpp  app3_omp.cpp
OpenMP/nested/: Makefile
OpenMP/nested/src/: nested.cpp
client_server/src/: client.cpp  server.cpp
diffusion_problem/include/: solver.h
diffusion_problem/src/: main.cpp
exponent/: Makefile
exponent/src/: exponent.cpp
integration/: .~lock.experiment.xlsx#  Makefile  integration
integration/src/: integration.cpp
introduction/: Makefile  hello_world  ring  sum
para_sort/: Makefile  para_sort
para_sort/src/: para_sort.cpp  sort.cpp
send_recv/: Makefile  a.out  send_recv
send_recv/src/: send_recv.cpp
